@@ -17,6 +17,7 @@
 - Added keyboard shortcuts for more menu elements
 - Added built-in docs viewer on mac
 - Fixed print dialog to show correct page amount instead of 9999 (WARNING: requires patching wxWidgets, see docs)
+- It is now possible to see song length (minutes:seconds) in song info window
 
 1.2b3
 - Refactored preferences to look better, be cleaner and allow setting a default value for "follow playback"
